TASK-1: Добвлены методы получения всех заявок и изменениия статуса
